--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "version": "1.0.0",
+  "version": "1.0.1",
   "license": "MIT",
   "private": false,
   "main": "dist/index.js",
@@ -26,6 +26,7 @@
     "lossless",
     "compressor",
     "data",
+    "browser",
     "JSONCrush",
     "JSCrush"
   ],
